Update directory structure based on express-generator

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,10 +49,10 @@ html(lang="en")
 
     if loggedIn
       script(src="//api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js")
-      script(src="/js/Polyline.encoded.js")
-      script(src="/js/jquery-1.11.0.min.js")
-      script(src="/js/bootstrap.min.js")
-      script(src="/js/moment.min.js")
-      script(src="/js/moment-timezone.min.js")
-      script(src="/js/moment-timezone-data.js")
-      script(src="/js/main.js")
+      script(src="/javascripts/Polyline.encoded.js")
+      script(src="/javascripts/jquery-1.11.0.min.js")
+      script(src="/javascripts/bootstrap.min.js")
+      script(src="/javascripts/moment.min.js")
+      script(src="/javascripts/moment-timezone.min.js")
+      script(src="/javascripts/moment-timezone-data.js")
+      script(src="/javascripts/main.js")
