--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,9 +62,17 @@ body {
   background: url(/images/automatic-logo.png) 0 0 no-repeat;
 }
 
+.display-type {
+  margin-top: 20px;
+}
+
 #trips {
   clear: both;
   margin-top: 30px;
+  color: #777;
+}
+
+#trips a {
   color: #777;
 }
 
@@ -84,6 +92,7 @@ body {
   margin-bottom: 0;
   border-top: 1px solid rgb(221, 221, 221);
   color: rgb(51, 51, 51);
+  display: block;
 }
 
 #trips .table:first-child {
@@ -159,6 +168,7 @@ body {
   font-size: 12px;
   padding: 10px;
   position: relative;
+  pointer: cursor;
 }
 
 .trip.tile .duration {
@@ -201,6 +211,7 @@ body {
   float: left;
   width: 400px;
   padding: 10px;
+  pointer: cursor;
 }
 
 .trip.tile .startLocation,
@@ -447,4 +458,61 @@ body {
   z-index: 9999;
   pointer-events: none;
   right: 0;
+}
+
+.btn.back {
+  margin-top: 15px;
+}
+
+#trip {
+  overflow: hidden;
+}
+
+#trip h2 {
+  margin-top: 5px;
+}
+
+#trip .map {
+  width: 600px;
+  height: 400px;
+  float: left;
+}
+
+#trip .tripSummary {
+  width: 335px;
+  float: right;
+}
+
+#trip .times .startTime {
+  width: 115px;
+  display: inline-block;
+}
+
+#trip .times .endTime {
+  width: 115px;
+  padding-left: 20px;
+  display: inline-block;
+}
+
+#trip .times .duration {
+  display: inline-block;
+}
+
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path,
+.y.axis path {
+  display: none;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
 }
