--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html(lang="en")
     meta(name="description" content="View and Export your Automatic Trips")
     link(rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" media="screen")
     link(rel="stylesheet" type="text/css" href="/css/style.css" media="screen")
-    link(href='//api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.css' rel='stylesheet')
+    link(href='//api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet')
   body
     .github-fork-ribbon-wrapper
       .github-fork-ribbon
@@ -28,10 +28,10 @@ html(lang="en")
 
           .collapse.navbar-collapse
             ul.nav.navbar-nav
-              li.active
-                a.display-type(href="#" data-type="tile") Tiles
               li
-                a.display-type(href="#" data-type="table") Table
+                a(href="/") Summary
+              li
+                a(href="/trips") Trips
               li.dropdown
                 a#export.dropdown-toggle(href="#" data-toggle="dropdown") <span>Export All</span> <b class="caret"></b>
                 ul.dropdown-menu(role="menu")
@@ -47,12 +47,14 @@ html(lang="en")
       #alert.alert
       block content
 
-    if loggedIn
-      script(src="//api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js")
-      script(src="/javascripts/Polyline.encoded.js")
-      script(src="/javascripts/jquery-1.11.0.min.js")
-      script(src="/javascripts/bootstrap.min.js")
-      script(src="/javascripts/moment.min.js")
-      script(src="/javascripts/moment-timezone.min.js")
-      script(src="/javascripts/moment-timezone-data.js")
-      script(src="/javascripts/main.js")
+    script(src="//api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js")
+    script(src="/javascripts/Polyline.encoded.js")
+    script(src="/javascripts/jquery-1.11.0.min.js")
+    script(src="/javascripts/underscore-min.js")
+    script(src="/javascripts/bootstrap.min.js")
+    script(src="/javascripts/moment.min.js")
+    script(src="/javascripts/moment-timezone.min.js")
+    script(src="/javascripts/moment-timezone-data.js")
+    script(src="/javascripts/helper.js")
+
+    block scripts
