--- a/public/css/style.css
+++ b/public/css/style.css
@@ -399,8 +399,18 @@ body {
 .loading {
   text-align: center;
   font-size: 20px;
-  background: url(/images/loading.gif) center bottom no-repeat;
   height: 130px;
+  background: #FFF url(/images/loading.gif) center bottom no-repeat;
+  height: 130px;
+  position: absolute;
+  right: 50%;
+  top: 230px;
+  width: 200px;
+  margin-right: -100px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
 
 
