--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,14 @@ body {
   margin-top: 20px;
 }
 
+.panel-heading {
+  font-weight: bold;
+}
+
+#graphs .graph {
+  height: 227px;
+}
+
 #trips {
   clear: both;
   margin-top: 30px;
@@ -403,7 +411,7 @@ body {
   height: 130px;
   position: absolute;
   right: 50%;
-  top: 230px;
+  top: 250px;
   width: 200px;
   margin-right: -100px;
   border-radius: 4px;
@@ -531,6 +539,7 @@ body {
 }
 
 #trip .btn-share {
+  display: none;
   position: absolute;
   bottom: 10px;
   right: 10px;
