--- a/public/css/style.css
+++ b/public/css/style.css
@@ -562,3 +562,13 @@ body {
   stroke: steelblue;
   stroke-width: 1.5px;
 }
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
+
+.focus circle {
+  fill: none;
+  stroke: steelblue;
+}
