--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,20 +46,14 @@ body {
   margin-top: 20px;
 }
 
-.sign-in .btn {
+.sign-in .btn-sign-in {
   display: block;
   margin: 0 auto;
-  width: 250px;
-  margin-top:12px;
-}
-
-.sign-in .btn .automatic-logo {
-  height: 24px;
-  width: 24px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 5px;
-  background: url(/images/automatic-logo.png) 0 0 no-repeat;
+  width: 240px;
+  height: 39px;
+  margin-top: 12px;
+  background: url(../images/signin.png) 0 0 no-repeat;
+  text-indent: -9999px;
 }
 
 .display-type {
@@ -571,4 +565,14 @@ body {
 .focus circle {
   fill: none;
   stroke: steelblue;
+}
+
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-resolution: 144dpi) {
+
+  .sign-in .btn-sign-in {
+    background-image: url(../images/signin@2x.png);
+    background-size: 240px 39px;
+  }
+
 }
