--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   .panel.panel-default.sign-in
     .panel-body.row
-      .col-md-4.description Trip Tracker shows your trips taken with <a href="http://automatic.com" target="_blank">Automatic Link</a> and allows you to easily categorize and export them.
-      .col-md-6
-        a.center-block.btn.btn-primary.btn-lg(href="/authorize/") <span class="icon automatic-logo"></span>Sign in with Automatic
+      .col-md-4.col-md-offset-2.description TripViewer shows your trips taken with <a href="http://automatic.com" target="_blank">Automatic Link</a> and allows you to easily categorize and export them.
+      .col-md-4
+        a.center-block.btn-sign-in(href="/authorize/") Sign in with Automatic
