--- a/views/summary.jade
+++ b/views/summary.jade
@@ -15,7 +15,7 @@ block content
             li.fuel_cost_usd.list-group-item <span class="badge"></span> Fuel Cost
     .col-sm-8
       #graphs.panel.panel-default
-        .panel-heading Monthly Driving
+        .panel-heading Weekly Driving
         .panel-body
           .btn-group.graph-buttons
             button.btn.btn-default.active(type="button" data-graph-type="distance") Miles
