--- a/views/layout.jade
+++ b/views/layout.jade
@@ -56,6 +56,7 @@ html(lang="en")
     script(src="/javascripts/moment-timezone.min.js")
     script(src="/javascripts/moment-timezone-data.js")
     script(src="/javascripts/helper.js")
+    script(src="/javascripts/data.js")
     script(src="/javascripts/main.js")
 
     block scripts
