--- a/views/summary.jade
+++ b/views/summary.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   #summary
     h2 Summary
-    .col-sm-4
+    #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
+    .col-sm-4(style="clear: both;")
       #overall.panel.panel-default
         .panel-heading Total Automatic Stats
         .panel-body
