--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,6 +32,8 @@ html(lang="en")
                 a(href="/") Summary
               li(class=(menu === 'trips' ? 'active' : ''))
                 a(href="/trips") Trips
+              li(class=(menu === 'vehicles' ? 'active' : ''))
+                a(href="/vehicles") Vehicles
               li.dropdown
                 a#export.dropdown-toggle(href="#" data-toggle="dropdown") <span>Export All</span> <b class="caret"></b>
                 ul.dropdown-menu(role="menu")
@@ -55,6 +57,8 @@ html(lang="en")
     script(src="/javascripts/moment.min.js")
     script(src="/javascripts/moment-timezone.min.js")
     script(src="/javascripts/moment-timezone-data.js")
+    script(src="/javascripts/d3.min.js")
+
     script(src="/javascripts/helper.js")
     script(src="/javascripts/data.js")
     script(src="/javascripts/main.js")
