--- a/views/summary.jade
+++ b/views/summary.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   #summary
-    h2 Summary
+    h2.pageTitle Summary
     #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
     .col-sm-4(style="clear: both;")
       #overall.panel.panel-default
