--- a/views/vehicles.jade
+++ b/views/vehicles.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h2 Vehicles
+  h2.pageTitle Vehicles
+  #refresh.btn.btn-default <i class="glyphicon glyphicon-refresh"></i> Refresh
   #vehicles
   .loading Loading...
 
