--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,9 @@ html(lang="en")
     meta(http-equiv="content-type" content="text/html; charset=utf-8")
     meta(http-equiv="X-UA-Compatible" content="chrome=1")
     meta(name="description" content="View and Export your Automatic Trips")
-    link(rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" media="screen")
+    link(rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen")
     link(rel="stylesheet" type="text/css" href="/css/style.css" media="screen")
-    link(href='//api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet')
+    link(rel="stylesheet" type="text/css" href="/bower_components/mapbox.js/mapbox.css")
   body
     .github-fork-ribbon-wrapper
       .github-fork-ribbon
@@ -49,15 +49,14 @@ html(lang="en")
       #alert.alert
       block content
 
-    script(src="//api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js")
-    script(src="/javascripts/Polyline.encoded.js")
-    script(src="/javascripts/jquery-1.11.1.min.js")
-    script(src="/javascripts/underscore-min.js")
-    script(src="/javascripts/bootstrap.min.js")
-    script(src="/javascripts/moment.min.js")
-    script(src="/javascripts/moment-timezone.min.js")
-    script(src="/javascripts/moment-timezone-data.js")
-    script(src="/javascripts/d3.min.js")
+    script(src="/bower_components/mapbox.js/mapbox.js")
+    script(src="/bower_components/Leaflet.encoded/Polyline.encoded.js")
+    script(src="/bower_components/jquery/dist/jquery.min.js")
+    script(src="/bower_components/underscore/underscore-min.js")
+    script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
+    script(src="/bower_components/moment/min/moment.min.js")
+    script(src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.min.js")
+    script(src="/bower_components/d3/d3.min.js")
 
     script(src="/javascripts/helper.js")
     script(src="/javascripts/data.js")
