--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,8 +151,8 @@ h2.pageTitle {
   width: 65px;
 }
 
-.table .startLocation,
-.table .endLocation {
+.table .startAddress,
+.table .endAddress {
   width: 238px;
 }
 
@@ -228,8 +228,8 @@ h2.pageTitle {
   pointer: cursor;
 }
 
-.trip.tile .startLocation,
-.trip.tile .endLocation {
+.trip.tile .startAddress,
+.trip.tile .endAddress {
   font-size: 18px;
   padding-left: 10px;
 }
@@ -548,13 +548,6 @@ h2.pageTitle {
   height: 227px;
 }
 
-#trip .btn-share {
-  display: none;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-}
-
 .axis path,
 .axis line {
   fill: none;
@@ -624,12 +617,6 @@ text.key {
   display: inline-block;
 }
 
-#vehicles .vehicle .vehicleDetails div {
-  font-size: 16px;
-  display: inline-block;
-  padding-right: 8px;
-}
-
 #vehicles .vehicle .vehicleStats {
   display: inline-block;
   width: 490px;
@@ -660,12 +647,9 @@ text.key {
 }
 
 
-
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-resolution: 144dpi) {
-
   .sign-in .btn-sign-in {
     background-image: url(../images/signin@2x.png);
     background-size: 240px 39px;
   }
-
 }
