--- a/views/summary.jade
+++ b/views/summary.jade
@@ -16,10 +16,10 @@ block content
           .panel-body
             .btn-group.graph-buttons
               button.btn.btn-default.active(type="button" data-graph-type="distance") Distance
-              button.btn.btn-default(type="button" data-graph-type="duration") Duration
+              button.btn.btn-default(type="button" data-graph-type="duration_s") Duration
               button.btn.btn-default(type="button" data-graph-type="trip_count") Trips
               button.btn.btn-default(type="button" data-graph-type="fuel_cost_usd") Fuel Cost
-              button.btn.btn-default(type="button" data-graph-type="fuel_volume_gal") Fuel Volume
+              button.btn.btn-default(type="button" data-graph-type="fuel_volume_usgal") Fuel Volume
 
             .graph
 
@@ -28,11 +28,11 @@ block content
 block scripts
   script(type="text/template" id='summaryList')
     ul.list-group
-      li.distance.list-group-item <span class="badge"><%- formatDistance(m_to_mi(distance_m)) %></span> Miles Driven
-      li.duration.list-group-item <span class="badge"><%- formatDuration(duration) %></span> Duration
-      li.trip_count.list-group-item <span class="badge"><%- trip_count %></span> Trip Count
-      li.average_mpg.list-group-item <span class="badge"><%- formatMPG(average_mpg) %></span> Average MPG
-      li.fuel_volume_gal.list-group-item <span class="badge"><%- formatFuelVolume(fuel_volume_gal) %></span> Gallons of Fuel
-      li.fuel_cost_usd.list-group-item <span class="badge">$<%- formatFuelCost(fuel_cost_usd) %></span> Fuel Cost
+      li.list-group-item <span class="badge"><%- formatDistance(m_to_mi(distance_m)) %></span> Miles Driven
+      li.list-group-item <span class="badge"><%- formatDuration(duration_s) %></span> Duration
+      li.list-group-item <span class="badge"><%- trip_count %></span> Trip Count
+      li.list-group-item <span class="badge"><%- formatMPG(average_mpg) %></span> Average MPG
+      li.list-group-item <span class="badge"><%- formatFuelVolume(fuel_volume_usgal) %></span> Gallons of Fuel
+      li.list-group-item <span class="badge">$<%- formatFuelCost(fuel_cost_usd) %></span> Fuel Cost
 
   script(src="/javascripts/summary.js")
