Updates to work with v2

--- a/views/trip.jade
+++ b/views/trip.jade
@@ -14,9 +14,9 @@ block scripts
     .map(id="map{{id}}")
     .trip.tile
       .times
-        .endTime {{ended_at}}
+        .endTime {{ended_at_formatted}}
         .duration {{duration}}
-        .startTime {{started_at}}
+        .startTime {{started_at_formatted}}
         .tripLine
           div
           div
