--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,40 +12,44 @@ html(lang="en")
     .github-fork-ribbon-wrapper
       .github-fork-ribbon
         a(href="https://github.com/Automatic/tripviewer") Fork me on GitHub
+        
+    .mainHeader
+      .wrapper
+        a.logo(href="http://automatic.com")
+        .titlebar
+          h1 TripViewer
+          .tagline View and Export your Automatic Trips
+          
+        if loggedIn
+          nav#topmenu.navbar.navbar-default(role="navigation")
+            .navbar-header
+              button.navbar-toggle(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+                      
+            .collapse.navbar-collapse
+              ul.nav.navbar-nav
+                li(class=(menu === 'summary' ? 'active' : ''))
+                  a(href="/") Summary
+                li(class=(menu === 'trips' ? 'active' : ''))
+                  a(href="/trips") Trips
+                li(class=(menu === 'vehicles' ? 'active' : ''))
+                  a(href="/vehicles") Vehicles
+                li.dropdown
+                  a#export.dropdown-toggle(href="#" data-toggle="dropdown") <span>Export All</span> <b class="caret"></b>
+                  ul.dropdown-menu(role="menu")
+                    li
+                      a#csv(href="/download/trips.csv" target="_blank") as .csv
+                    li
+                      a#json(href="/download/trips.json" target="_blank") as JSON
+                      
+              ul.nav.navbar-nav.navbar-right
+                li
+                  a#logout(href="/logout/") Log Out
 
-    div#wrapper
-      h1.titlebar TripViewer
-      .tagline View and Export your Automatic Trips
-
-      if loggedIn
-        nav#topmenu.navbar.navbar-default(role="navigation")
-          .navbar-header
-            button.navbar-toggle(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-
-          .collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li(class=(menu === 'summary' ? 'active' : ''))
-                a(href="/") Summary
-              li(class=(menu === 'trips' ? 'active' : ''))
-                a(href="/trips") Trips
-              li(class=(menu === 'vehicles' ? 'active' : ''))
-                a(href="/vehicles") Vehicles
-              li.dropdown
-                a#export.dropdown-toggle(href="#" data-toggle="dropdown") <span>Export All</span> <b class="caret"></b>
-                ul.dropdown-menu(role="menu")
-                  li
-                    a#csv(href="/download/trips.csv" target="_blank") as .csv
-                  li
-                    a#json(href="/download/trips.json" target="_blank") as JSON
-
-            ul.nav.navbar-nav.navbar-right
-              li
-                a#logout(href="/logout/") Log Out
-
+    .wrapper.content
       #alert.alert
       block content
 
